--- a/Process.xaml
+++ b/Process.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1165,1364</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1143,1404</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -60,6 +60,7 @@
       <AssemblyReference>UiPath.CV</AssemblyReference>
       <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
       <AssemblyReference>UiPath.Database</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="510,1199" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -143,11 +144,24 @@
               </ui:InvokeWorkflowFile>
               <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendHackerrankTest for RPA Dev" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\SendHackerrankTest.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[devId]</InArgument>
-                  <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">4</InArgument>
-                  <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_FullName">[dev("First Name").ToString + " " + dev("Last Name").ToString]</InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Email">[dev("Email Address").ToString]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="devId" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">
+                    <Literal x:TypeArguments="x:Int32" Value="4" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+                    <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_FullName">
+                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="dev(&quot;First Name&quot;).ToString + &quot; &quot; + dev(&quot;Last Name&quot;).ToString" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Email">
+                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="dev(&quot;Email Address&quot;).ToString" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                    <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="myConnection" />
+                  </InArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
             </Sequence>
