--- a/Workflows/InviteApiCall.xaml
+++ b/Workflows/InviteApiCall.xaml
@@ -9,7 +9,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>558,719</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1143,784</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>InviteApiCall_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="44">
@@ -65,7 +65,7 @@
       <AssemblyReference>UiPath.UIAutomationX</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="InviteApiCall" sap:VirtualizedContainerService.HintSize="538,619" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="InviteApiCall" sap:VirtualizedContainerService.HintSize="539,619" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="theTestCall" />
       <Variable x:TypeArguments="x:String" Name="theResult" />
@@ -77,7 +77,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:HttpClient ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" Body="[in_Body]" BodyFormat="application/json" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request Hackerrank" EndPoint="[in_EndPoint]" sap:VirtualizedContainerService.HintSize="496,22" sap2010:WorkflowViewState.IdRef="HttpClient_2" Method="POST" Result="[theResult]" StatusCode="[out_Status]" TimeoutMS="6000">
+    <ui:HttpClient ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" Body="[in_Body]" BodyFormat="application/json" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request Hackerrank" EndPoint="[in_EndPoint]" sap:VirtualizedContainerService.HintSize="497,22" sap2010:WorkflowViewState.IdRef="HttpClient_2" Method="POST" Result="[theResult]" StatusCode="[out_Status]" TimeoutMS="6000">
       <ui:HttpClient.Attachments>
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.Attachments>
@@ -95,7 +95,7 @@
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.UrlSegments>
     </ui:HttpClient>
-    <Switch x:TypeArguments="x:Int32" DisplayName="Switch" Expression="[out_Status]" sap:VirtualizedContainerService.HintSize="496,465" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+    <Switch x:TypeArguments="x:Int32" DisplayName="Switch" Expression="[out_Status]" sap:VirtualizedContainerService.HintSize="497,465" sap2010:WorkflowViewState.IdRef="Switch`1_1">
       <Switch.Default>
         <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Warn" Message="[theResult +environment.NewLine + out_Status.ToString]" />
       </Switch.Default>
@@ -123,7 +123,7 @@
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Body="[&quot;Result = &quot; + theResult + environment.NewLine+&quot; ENDPOINT = &quot; +in_EndPoint + Environment.NewLine + &quot;BODY = &quot; + in_Body]" sap:VirtualizedContainerService.HintSize="334,145" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="[&quot;status = &quot; +out_Status.ToString]" To="ionut.macarin@uipath.com">
+        <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Body="[&quot;Result = &quot; + theResult + environment.NewLine+&quot; ENDPOINT = &quot; +in_EndPoint + Environment.NewLine + &quot;BODY = &quot; + in_Body]" sap:VirtualizedContainerService.HintSize="334,145" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="[&quot;status = &quot; +out_Status.ToString]" To="ionut.nicula@uipath.com">
           <ui:SendOutlookMail.Files>
             <scg:List x:TypeArguments="InArgument(x:String)" Capacity="0" />
           </ui:SendOutlookMail.Files>
