--- a/Workflows/SendHackerrankTest.xaml
+++ b/Workflows/SendHackerrankTest.xaml
@@ -6,6 +6,7 @@
     <x:Property Name="in_FullName" Type="InArgument(x:String)" />
     <x:Property Name="in_Email" Type="InArgument(x:String)" />
     <x:Property Name="in_Connection" Type="InArgument(ui:DatabaseConnection)" />
+    <x:Property Name="out_Inserted" Type="OutArgument(x:Boolean)" />
   </x:Members>
   <this:SendHackerrankTest.in_Connection>
     <InArgument x:TypeArguments="ui:DatabaseConnection" />
@@ -13,7 +14,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1199,3229</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1220,3202</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>SendHackerrankTest_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -69,7 +70,7 @@
       <AssemblyReference>UiPath.Database</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="SendHackerrankTest" sap:VirtualizedContainerService.HintSize="1156,3064" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="SendHackerrankTest" sap:VirtualizedContainerService.HintSize="1230,3037" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="theBody" />
       <Variable x:TypeArguments="scg:Dictionary(x:String, x:String)" Name="inviteDict" />
@@ -85,8 +86,8 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1114,64" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;=== SendHackerrank Test===&quot; + Environment.NewLine +&#xA;&quot;Position: &quot; + in_EmployeePosition.ToString + Environment.NewLine +&#xA;in_FullName + &quot; &quot; + in_Email]" />
-    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[hackerRankDt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="1114,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2" Sql="[&quot;select * from dbo.hackerank where partneremployee_id=&quot;+in_EmployeeId.ToString +&quot; and position_ID=&quot; + in_EmployeePosition.ToString]">
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1188,64" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;=== SendHackerrank Test===&quot; + Environment.NewLine +&#xA;&quot;Position: &quot; + in_EmployeePosition.ToString + Environment.NewLine +&#xA;in_FullName + &quot; &quot; + in_Email]" />
+    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[hackerRankDt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="1188,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2" Sql="[&quot;select * from dbo.hackerank where partneremployee_id=&quot;+in_EmployeeId.ToString +&quot; and position_ID=&quot; + in_EmployeePosition.ToString]">
       <ui:ExecuteQuery.Parameters>
         <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:ExecuteQuery.Parameters>
@@ -96,7 +97,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:ExecuteQuery>
-    <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="1114,52" sap2010:WorkflowViewState.IdRef="CommentOut_1">
+    <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="1188,52" sap2010:WorkflowViewState.IdRef="CommentOut_1">
       <ui:CommentOut.Body>
         <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="526,330" sap2010:WorkflowViewState.IdRef="Sequence_11">
           <sap:WorkflowViewStateService.ViewState>
@@ -120,8 +121,8 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:CommentOut>
-    <ui:ReadTextFile Content="[theBody]" DisplayName="Read API Template" FileName="API%20CALLS\inviteCall.txt" sap:VirtualizedContainerService.HintSize="1114,80" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
-    <ui:MultipleAssign DisplayName="Multiple Assign Email Addresses and api calls Status 4" sap:VirtualizedContainerService.HintSize="1114,98" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
+    <ui:ReadTextFile Content="[theBody]" DisplayName="Read API Template" FileName="API%20CALLS\inviteCall.txt" sap:VirtualizedContainerService.HintSize="1188,80" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
+    <ui:MultipleAssign DisplayName="Multiple Assign Email Addresses and api calls Status 4" sap:VirtualizedContainerService.HintSize="1188,98" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
       <ui:MultipleAssign.AssignOperations>
         <scg:List x:TypeArguments="ui:AssignOperation" Capacity="16">
           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_1">
@@ -141,7 +142,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:MultipleAssign>
-    <Switch x:TypeArguments="x:Int32" DisplayName="Switch jotFormID for BIO" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1114,52" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+    <Switch x:TypeArguments="x:Int32" DisplayName="Switch jotFormID for BIO" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1188,52" sap2010:WorkflowViewState.IdRef="Switch`1_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -241,7 +242,7 @@
         </Assign>
       </Sequence>
     </Switch>
-    <Assign DisplayName="Assign devBio" sap:VirtualizedContainerService.HintSize="1114,60" sap2010:WorkflowViewState.IdRef="Assign_10">
+    <Assign DisplayName="Assign devBio" sap:VirtualizedContainerService.HintSize="1188,60" sap2010:WorkflowViewState.IdRef="Assign_10">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[bioJotUrl]</OutArgument>
       </Assign.To>
@@ -249,7 +250,7 @@
         <InArgument x:TypeArguments="x:String">["https://form.jotform.com/"+formId+"?employeeId="+in_EmployeeId]</InArgument>
       </Assign.Value>
     </Assign>
-    <Sequence sap2010:Annotation.AnnotationText="Create dictionary for hackerrank dynamic values" DisplayName="Invite Dictionary" sap:VirtualizedContainerService.HintSize="1114,112" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence sap2010:Annotation.AnnotationText="Create dictionary for hackerrank dynamic values" DisplayName="Invite Dictionary" sap:VirtualizedContainerService.HintSize="1188,112" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -266,7 +267,7 @@
       <p:AddToDictionary x:TypeArguments="x:String, x:String" Dictionary="[inviteDict]" DisplayName="Add to evaluator_email" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToDictionary`2_7" Key="#evaluator_email#" Value="[in_Config(&quot;EvaluatorEmail4&quot;).ToString]" />
       <p:AddToDictionary x:TypeArguments="x:String, x:String" Dictionary="[inviteDict]" DisplayName="Add to force send email" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToDictionary`2_8" Key="#force#" Value="[in_Config(&quot;ForceInvite&quot;).ToString]" />
     </Sequence>
-    <ui:ForEach x:TypeArguments="scg:KeyValuePair(x:String, x:String)" CurrentIndex="{x:Null}" sap2010:Annotation.AnnotationText="Modify the dynamic values of the bodyapi" DisplayName="For Each item in Dict" sap:VirtualizedContainerService.HintSize="1114,318" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[inviteDict]">
+    <ui:ForEach x:TypeArguments="scg:KeyValuePair(x:String, x:String)" CurrentIndex="{x:Null}" sap2010:Annotation.AnnotationText="Modify the dynamic values of the bodyapi" DisplayName="For Each item in Dict" sap:VirtualizedContainerService.HintSize="1188,318" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[inviteDict]">
       <ui:ForEach.Body>
         <ActivityAction x:TypeArguments="scg:KeyValuePair(x:String, x:String)">
           <ActivityAction.Argument>
@@ -298,10 +299,10 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:ForEach>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1114,62" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Endpoint: &quot; + &quot;https://www.hackerrank.com/x/api/v3/tests/&quot;+testId+&quot;/candidates&quot;]" />
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1114,64" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Body: &quot; + Environment.NewLine  +&#xA;theBody]" />
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1114,62" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Bio: &quot; + Environment.NewLine + theBody]" />
-    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InviteApiCall RPA DEV" sap:VirtualizedContainerService.HintSize="1114,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Workflows/InviteApiCall.xaml">
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1188,62" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Endpoint: &quot; + &quot;https://www.hackerrank.com/x/api/v3/tests/&quot;+testId+&quot;/candidates&quot;]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1188,64" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Body: &quot; + Environment.NewLine  +&#xA;theBody]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1188,62" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Bio: &quot; + Environment.NewLine + theBody]" />
+    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InviteApiCall RPA DEV" sap:VirtualizedContainerService.HintSize="1188,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Workflows/InviteApiCall.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="in_Body">[theBody]</InArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_Token">Bearer d4ac6a7c3fd658895c1079af45797798553ab84af4f2ea37b39bf32a3f972d79</InArgument>
@@ -316,10 +317,10 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:InvokeWorkflowFile>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1114,64" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Status: &quot; + outStatus.ToString + Environment.NewLine +&#xA;&quot;TestId: &quot; + candidateId.ToString]" />
-    <If Condition="[outStatus =200]" sap:VirtualizedContainerService.HintSize="1114,1105" sap2010:WorkflowViewState.IdRef="If_1">
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1188,64" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Status: &quot; + outStatus.ToString + Environment.NewLine +&#xA;&quot;TestId: &quot; + candidateId.ToString]" />
+    <If Condition="[outStatus =200]" sap:VirtualizedContainerService.HintSize="1188,1078" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
-        <Sequence DisplayName="Update hackerrank table" sap:VirtualizedContainerService.HintSize="693,955" sap2010:WorkflowViewState.IdRef="Sequence_9">
+        <Sequence DisplayName="Update hackerrank table" sap:VirtualizedContainerService.HintSize="767,928" sap2010:WorkflowViewState.IdRef="Sequence_9">
           <Sequence.Variables>
             <Variable x:TypeArguments="sd:DataTable" Name="dt" />
           </Sequence.Variables>
@@ -328,8 +329,8 @@
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="651,93" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Updating hackerrank...&quot;]" />
-          <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[dt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="651,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;select * from dbo.hackerank where hackerrankTestID=&quot;+candidateId]">
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="725,93" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Updating hackerrank...&quot;]" />
+          <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[dt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="725,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;select * from dbo.hackerank where hackerrankTestID=&quot;+candidateId]">
             <ui:ExecuteQuery.Parameters>
               <scg:Dictionary x:TypeArguments="x:String, Argument" />
             </ui:ExecuteQuery.Parameters>
@@ -339,9 +340,9 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </ui:ExecuteQuery>
-          <If Condition="[dt.Rows.Count = 0]" sap:VirtualizedContainerService.HintSize="651,431" sap2010:WorkflowViewState.IdRef="If_2">
+          <If Condition="[dt.Rows.Count = 0]" sap:VirtualizedContainerService.HintSize="725,531" sap2010:WorkflowViewState.IdRef="If_2">
             <If.Then>
-              <Sequence sap:VirtualizedContainerService.HintSize="376,281" sap2010:WorkflowViewState.IdRef="Sequence_13">
+              <Sequence sap:VirtualizedContainerService.HintSize="376,381" sap2010:WorkflowViewState.IdRef="Sequence_13">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -357,28 +358,35 @@
                     <InArgument x:TypeArguments="x:String" x:Key="in_positionID">[in_EmployeePosition.ToString]</InArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                 </ui:InvokeWorkflowFile>
+                <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_11">
+                  <Assign.To>
+                    <OutArgument x:TypeArguments="x:Boolean">[out_Inserted]</OutArgument>
+                  </Assign.To>
+                  <Assign.Value>
+                    <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                  </Assign.Value>
+                </Assign>
               </Sequence>
             </If.Then>
             <If.Else>
-              <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,62" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="Hackerrank Id exists" />
+              <Sequence sap:VirtualizedContainerService.HintSize="304,254" sap2010:WorkflowViewState.IdRef="Sequence_14">
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
+                <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_12">
+                  <Assign.To>
+                    <OutArgument x:TypeArguments="x:Boolean">[out_Inserted]</OutArgument>
+                  </Assign.To>
+                  <Assign.Value>
+                    <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                  </Assign.Value>
+                </Assign>
+                <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="Hackerrank Id exists" />
+              </Sequence>
             </If.Else>
           </If>
-          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendCandidateBioEmail workflow" sap:VirtualizedContainerService.HintSize="651,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\SendCandidateBioEmail.xaml">
-            <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="x:String" x:Key="in_Position">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_EmployeePosition.ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-                <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_EmployeeId.ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_Email">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Email" />
-              </InArgument>
-            </ui:InvokeWorkflowFile.Arguments>
-          </ui:InvokeWorkflowFile>
         </Sequence>
       </If.Then>
       <If.Else>
